<resources>
    <string name="app_name">音乐精灵</string>
    <string name="NoahMusic">NoahMusic</string>
    <string name="a_menu">a menu</string>
    <string name="ivIcon">IvIcon</string>
    <string name="image">Image</string>
    <string name="scanFail">哎呀，扫描歌曲失败！请检查设备是否存有歌曲</string>
    <string name="TimingNotOpen">定时功能未开启</string>
    <string name="close">关闭</string>
    <string name="tenMin">10分钟</string>
    <string name="twentyMin">20分钟</string>
    <string name="thirtyMin">30分钟</string>
    <string name="hour">1小时</string>
    <string name="custom">自定义</string>
    <string name="playStop">停止播放</string>
    <string name="timingEndStyle">定时结束后</string>
    <string name="finishPlay">播完整首歌再停止</string>
    <string name="willStopPlay">后，将停止播放歌曲</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="customPlayTime">自定义播放时间</string>
    <string name="timingFinished">定时结束后</string>
    <string name="exit">退出应用</string>
</resources>
